escape none URL characters
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@395206 13f79535-47bb-0310-9956-ffa450edef68